1.13/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: projekti-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: projekti-svc
          servicePort: 2345
